client/src/styles/scss/partials/_fileViewer.scss
.file-container {
  display: flex;
  flex-direction: column;
  min-height: 100%;

  .react-codemirror2 {
    position: relative;
    min-height: 100%;

    .CodeMirror {
      min-height: 40vh;
    }
  }

  .theme-select-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 8vh;
    background-color: rgba(0,0,0,0.6);
    
    .select-text {
      color: #EEE;
      padding: 0rem;
      margin: 0rem;
    }
    .theme-select {
      padding: 0.5rem;
      margin: 0.5rem;
    }
  }
}

